basic code  added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>search opration-UI</title>
 </head>
 <body>
+    <body>
+        <h1 class="app-heading">Students🔍</h1>
+        <div class="container">
+        <input type="text" id="search" class="search" placeholder="search" onkeyup="loadResult()" />
+        <div id="students-container">
+    </div>
+        </div>
     
 </body>
 </html>
