--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
         <div id="students-container">
     </div>
         </div>
-    
+        <script>
+            const students = [
+                "punam",
+                "payal",
+                "Pooja",
+                "Sunita",
+                "Sonali",
+                "Aarti",
+                "Nikita",
+                "Pallavi",
+                "Preeta",
+                "Deepali",
+                "Rutuja",
+                "Kunal",
+                "Chetanya",
+                "Manisha",
+                "Gaytri",
+                "Priyanka"
+            ]
+    </script>
 </body>
 </html>
