--- a/index.html
+++ b/index.html
@@ -4,6 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>search opration-UI</title>
+    <style>
+        body{
+            background-color: #b9fcae;
+        }
+        .container{
+            width:300px;
+            margin: 20px auto;
+            background-color: azure;
+            padding: 10px ;
+            border: 1px solid #013a1e;
+        }
+        
+        .student-card{
+            border: 1px solid black;
+            margin: 8px 25px;
+            text-align: center;
+            font-size: 25px;
+            color: #1c5e08;
+            width: 240px;
+            background-color: #e6e6ff;
+        }
+        .search{
+            font-size: 24px;
+            cursor: pointer;
+             text-align: center;
+        }
+        
+        .app-heading{
+            margin-top: 10px;
+            text-align: center;
+            font-size: 50px;
+        }
+    </style>
+
 </head>
 <body>
     <body>
